# jumpdf

./: .gitignore  LICENSE  Makefile  README.md  app.c  app.h  config.h  io.github.b43NnUNF4vidFYFhpqaLWy2ANawtRbMtUXZY9Pf.jumpdf.json  keys.c  keys.h  main.c  meson.build  win.c  win.h
data/: README.md  app.1.in  app.desktop.in  app.metainfo.xml.in  appconfig.5.in  com.github.b43NnUNF4vidFYFhpqaLWy2ANawtRbMtUXZY9Pf.jumpdf.desktop  config.toml  install_config.sh  install_data_dir.sh  io.github.b43NnUNF4vidFYFhpqaLWy2ANawtRbMtUXZY9Pf.jumpdf.desktop  io.github.b43NnUNF4vidFYFhpqaLWy2ANawtRbMtUXZY9Pf.jumpdf.metainfo.xml  jumpdf.1  jumpdfconfig.5  meson.build  org.gtk.jumpdf.desktop
pkgs/flatpak/: io.github.b43NnUNF4vidFYFhpqaLWy2ANawtRbMtUXZY9Pf.jumpdf.json
po/: README.md
src/: app.c  app.h  config.c  config.h  database.c  database.h  file_utils.c  file_utils.h  input_FSM.c  input_FSM.h  input_cmd.c  input_cmd.h  keys.h  main.c  meson.build  page.c  page.h  project_config.h.in  render.c  render.h  renderer.c  renderer.h  statusline.c  statusline.h  toc.c  toc.h  utils.c  utils.h  viewer.c  viewer.h  viewer_cursor.c  viewer_cursor.h  viewer_info.c  viewer_info.h  viewer_links.c  viewer_links.h  viewer_mark_group.c  viewer_mark_group.h  viewer_mark_manager.c  viewer_mark_manager.h  (+6 more)
tools/: update_tag.sh
